# parse_statements

./: README.md  bank_statement.py  create_sqldb.py  extract_text.py  pyproject.toml
